<resources>
    <string name="app_name">반려하루</string>
    <string name="copyright">Copyright© 2022.Retriever. All rights reserved</string>
    <string name="invite_comment">가족 또는 친구를 초대해서 반려동물을 함께 케어해보세요!</string>
    <string name="more_see_text"><u>보기</u></string>
    <string name="input_code">초대코드 입력하기</string>
    <string name="create_group_comment">그룹을 만들면 공동 양육 기능 및 그룹 통계 기능을 사용할 수 있습니다\n그룹을 생성하고 가족 또는 친구를 초대해서\n반려동물을 함께 케어해보세요</string>
    <string name="group_photo_comment">(선택) 그룹 사진을 설정해주세요</string>
    <string name="group_name_comment">그룹을 대표하는 이름을 설정해주세요\n예시) 00패밀리, 00이네, 00커플, 00팸 등</string>
    <string name="group_nickname_comment">해당 닉네임은 그룹 내에서만 사용됩니다 (4자 이하)\n예시) 아빠, 오빠, 막내, 별명, 애칭 등</string>
    <string name="input_code_comment">그룹장에게 초대코드 공유를 부탁하세요!\n초대 코드를 입력하면 그룹 정보를 확인할 수 있습니다</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="invalid_nickname_text">올바른 닉네임을 입력해주세요.</string>
    <string name="valid_nickname_text">사용가능한 닉네임입니다.</string>
    <string name="already_used_nickname_text">이미 사용중인 닉네임입니다.</string>
    <string name="profile_setting_text">프로필 설정</string>
    <string name="capture_photo_text">사진 찍기</string>
    <string name="get_photo_text">사진 가져오기</string>
    <string name="invalid_groupname_text">올바른 그룹 이름을 입력해주세요.</string>
    <string name="valid_groupname_text">사용가능한 그룹 이름입니다.</string>
    <string name="already_used_groupname_text">이미 사용중인 그룹이름입니다. 다른 이름을 사용해주세요.</string>
    <string name="invalid_petname_text">올바른 반려동물 이름을 입력해주세요.</string>
    <string name="valid_petname_text">사용가능한 반려동물 이름입니다.</string>
    <string name="already_used_petname_text">그룹에 이미 존재하는 반려동물 이름입니다.</string>
    <string name="input_pet_birth_text">반려동물의 생일을 선택해주세요.</string>
    <string name="breed_text">품종</string>
    <string name="breed_search_hint_text">품종을 검색하세요</string>
    <string name="bottom_home_text">홈</string>
    <string name="bottom_diary_text">반려일기</string>
    <string name="bottom_calendar_text">반려일정</string>
    <string name="bottom_mypage_text">마이페이지</string>
    <string name="login_slogan_text">스마트한 반려동물 케어의 시작</string>
    <string name="login_sub_slogan_text">우리의 가족 반려동물, 매일매일 케어해보세요</string>
    <string name="version_text">ver 1.0.3</string>
    <string name="agree_terms_text">약관 동의하기</string>
    <string name="all_agree_text">모두 동의합니다.</string>
    <string name="first_check_text">[필수] 반려하루 서비스 이용약관</string>
    <string name="second_check_text">[필수] 개인정보 수집 및 이용약관</string>
    <string name="third_check_text">[선택] 프로필 정보 추가 수집 동의</string>
    <string name="fourth_check_text">[선택] 광고성 푸시알람 수신 동의</string>
    <string name="next_button_text">다음</string>
    <string name="profile_title_text">프로필 등록</string>
    <string name="profile_nickname_text">닉네임</string>
    <string name="nickname_hint_text">닉네임을 입력해주세요</string>
    <string name="overlap_check_text">중복확인</string>
    <string name="register_complete_text">등록완료</string>
    <string name="select_group_type_text">그룹 유형 선택</string>
    <string name="select_group_sub_type_text">반려동물 양육 유형을 선택해주세요</string>
    <string name="select_alone_text">\n혼자 키워요</string>
    <string name="alone_comment_text">1인가구 또는 반려동물을\n혼자서 케어하는 분에게\n적합한 유형이에요!</string>
    <string name="select_group_text">\n함께 키워요</string>
    <string name="group_comment_text">2인 이상의 가족 또는\n반려동물을 함께 케어하는\n그룹에게 적합한 유형이에요!</string>
    <string name="choose_complete_text">선택하기</string>
    <string name="create_family_title_text">그룹 생성하기</string>
    <string name="group_name_text">그룹 이름</string>
    <string name="group_name_hint">그룹 이름을 적어주세요</string>
    <string name="group_nickname_text">그룹 내 닉네임</string>
    <string name="group_nickname_hint">그룹 내 닉네임을 적어주세요</string>
    <string name="family_entrance_title">그룹 만들기 및 찾기</string>
    <string name="group_create_button_text">그룹 만들기</string>
    <string name="group_question_text">이미 그룹이 있으신가요?</string>
    <string name="create_pet_title_text">반려동물 등록</string>
    <string name="pet_name_text">이름</string>
    <string name="pet_name_edittext_hint">반려동물 이름을 입력해주세요</string>
    <string name="pet_type_text">반려동물 종류</string>
    <string name="dog_type_text">강아지</string>
    <string name="cat_type_text">고양이</string>
    <string name="pet_sex_text">성별</string>
    <string name="pet_sex_male_text">수컷</string>
    <string name="pet_sex_female_text">암컷</string>
    <string name="pet_birth_text">생일</string>
    <string name="pet_birth_date_hint">날짜를 입력해주세요</string>
    <string name="pet_breed_text">품종</string>
    <string name="pet_breed_hint">품종을 선택해주세요</string>
    <string name="pet_weight_text">몸무게</string>
    <string name="pet_weight_hint">몸무게를 입력해주세요 (kg)</string>
    <string name="pet_register_num_text">(선택) 반려동물 등록번호</string>
    <string name="pet_neutral_text">중성화 여부</string>
    <string name="not_neutral_text">미실시</string>
    <string name="neutral_text">완료</string>
    <string name="pet_register_num_hint">반려동물 등록번호를 입력해주세요 (12자리 또는 15자리)</string>
    <string name="pet_submit_text">등록하기</string>
    <string name="dont_know_text">믹스</string>
    <string name="creation_complete_text_title">등록이 완료되었습니다\n반려하루를 시작해보세요</string>
    <string name="complete_group_text">그룹명</string>
    <string name="complete_group_nickname_text">닉네임명</string>
    <string name="complete_nickname_text">닉네임</string>
    <string name="complete_pet_name_text">반려동물 이름</string>
    <string name="pet_add_text">반려동물을 추가 등록 하고싶다면?</string>
    <string name="pet_add_button_text">추가하기</string>
    <string name="group_invite_text">그룹 초대하기</string>
    <string name="find_group_text">초대코드 입력</string>
    <string name="care_start_text">케어 시작하기</string>
    <string name="invitation_message_text">[반려하루]\n\'%1$s\'님이 %2$s 그룹의 초대장을 보냈습니다\n하단의 초대코드를 입력해서 그룹에 참여하세요!\n\n초대코드 : %3$s\n앱 실행하기 : https://dailypet.page.link/invite</string>
    <string name="input_invitation_code_text">초대코드를 입력해주세요</string>
    <string name="find_group_confirm_text">찾고있는 그룹이 맞으신가요?</string>
    <string name="enter_group_text">프로필 추가</string>
    <string name="add_profile_text">그룹 입장</string>
    <string name="add_profile_submit_text">그룹 들어가기</string>
    <string name="empty_diary_text">아직 작성된 반려일기가 없어요\n반려일기를 작성해보세요!</string>
    <string name="more_view_text">더보기</string>
    <string name="diary_register_title">반려일기 작성하기</string>
    <string name="diary_modify_title">수정하기</string>
    <string name="complete_text">완료</string>
    <string name="diary_register_sub_title_text">2022.01.01</string>
    <string name="content_text">내용</string>
    <string name="diary_content_hint">반려동물과 함께한 추억을 기록해보세요</string>
    <string name="find_group_name_text">그룹명 : %1s</string>
    <string name="valid_invitation_code">유효한 초대코드입니다</string>
    <string name="invalid_invitation_code">유효하지않은 초대코드입니다</string>
    <string name="home_pet_day_text">%1$s님\n%2$s와 %3$d일 함께하고 있어요</string>
    <string name="home_contribution_text">이번주 기여도는 %d%%입니다</string>
    <string name="statistics_text">기여도 보기</string>
    <string name="care_title_text">챙겨주기</string>
    <string name="care_add_text">추가</string>
    <string name="init_add_care_button_text">챙겨주기 항목 등록하기</string>
    <string name="manage_pet_text">반려동물 관리</string>
    <string name="group_enter_text">그룹 들어가기</string>
    <string name="notification_text">공지사항</string>
    <string name="app_review_text">플레이스토어 리뷰 남기기</string>
    <string name="report_text">오류 제보</string>
    <string name="terms_of_service_text">이용약관</string>
    <string name="privacy_text">개인정보 처리방침</string>
    <string name="open_source_license_text">오픈소스 라이선스 확인하기</string>
    <string name="withdrawal_text">회원탈퇴</string>
    <string name="home_pet_name_text">%s</string>
    <string name="care_empty_comment_text">아직 챙겨주기 항목이 없어요\n등록하기 버튼을 눌러 반려동물을 챙겨주세요!</string>
    <string name="add_care_title_text">챙겨주기 등록하기</string>
    <string name="care_name_title">케어 항목</string>
    <string name="care_period_text">케어 요일</string>
    <string name="care_count_title_text">케어 횟수</string>
    <string name="care_count_comment_text">케어 횟수를 입력해주세요</string>
    <string name="add_care_submit_text">등록하기</string>
    <string name="care_card_title">케어항목</string>
    <string name="manage_group_text">그룹 및 반려동물 관리</string>
    <string name="select_pet_text">반려동물 조회</string>
    <string name="modify_text">수정하기</string>
    <string name="delete_text">삭제하기</string>
    <string name="cancel_text">취소</string>
    <string name="pet_dialog_message">%1s의 정보를 수정하거나 삭제하시겠습니까?</string>
    <string name="pet_detail_title_text">반려동물 정보</string>
    <string name="pet_register_num_title_text">반려동물 등록번호</string>
    <string name="weight_text">%.1fkg</string>
    <string name="care_count_text">0회</string>
    <string name="check_cancel_text">체크 취소</string>
    <string name="check_text">1회 체크</string>
    <string name="period_text">주기</string>
    <string name="care_count">%1$d회/%2$d회</string>
    <string name="input_care_text">케어 항목을 입력해주세요</string>
    <string name="pet_modify_title">반려동물 수정</string>
    <string name="my_page_group_title_text">그룹 정보 조회</string>
    <string name="group_title_text">그룹원</string>
    <string name="my_page_detail_title_text">그룹 상세 정보</string>
    <string name="group_member_title_text">그룹 구성원</string>
    <string name="pet_title_text">반려동물</string>
    <string name="recent_activity_title_text">최근 활동</string>
    <string name="modify_care_title_text">챙겨주기 수정하기</string>
    <string name="submit_modify_text">수정하기</string>
    <string name="marketing_text">마케팅 수신 정보 동의</string>
    <string name="kind_text">종류</string>
    <string name="not_registernum_text">없음</string>
    <string name="member_statistics_title_text">구성원 기여도</string>
    <string name="item_not_recent_diary_text">최근에 반려일기를 작성하지 않았습니다.</string>룹
    <string name="group_make_text">그룹 만들기</string>
    <string name="statistics_detail_text">항목별 기여도 보기</string>
    <string name="detail_statistics_title_text">항목별 기여도</string>
    <string name="barchart_marker_text">%d번</string>
    <string name="title_gallery">갤러리</string>
    <string name="title_camera">카메라</string>
    <string name="action_cancel">취소</string>
    <string name="permission_camera_denied">카메라 사용 권한이 거부되었습니다</string>
    <string name="ucrop_label_original">원본</string>
    <string name="ucrop_crop">자르기</string>
    <string name="ucrop_rotate">회전</string>
    <string name="ucrop_scale">크기 조정</string>
    <string name="error_failed_pick_gallery_image">취소</string>
    <string name="title_choose_image_provider">사진 업로드</string>
    <string name="error_task_cancelled">사진 등록을 취소합니다</string>
    <string name="ucrop_label_edit_photo">사진 편집</string>
    <string name="logout_dialog_title_text">로그아웃</string>
    <string name="logout_dialog_message_text">로그아웃 하시겠습니까?</string>
    <string name="withdrawal_dialog_title_text">회원탈퇴</string>
    <string name="withdrawal_dialog_message_text">회원탈퇴 하시겠습니까?</string>
    <string name="dialog_yes_text">네</string>
    <string name="dialog_no_text">아니요</string>
    <string name="duty_text">*</string>
    <string name="logout_text">로그아웃</string>
    <string name="contribution_text">기여도 상세보기</string>
    <string name="photo_comment_text">사진 비율은 3:2를 권장합니다</string>
    <string name="period_comment_text">* 케어카드는 해당하는 요일에만 나타납니다</string>
    <string name="photo_comment">사진은 한장만 업로드 할 수 있습니다\n사진 비율은 3:2를 권장합니다</string>
    <string name="register_diary_text">일기 등록하기</string>
    <string name="splash_text">스마트한 반려동물 케어의 시작</string>
    <string name="group_sub_comment_text">그룹 만들기 / 그룹 들어가기</string>
    <string name="can_not_withdrawal_comment">회원님은 그룹장입니다\n그룹 탈퇴를 원하시면 다른 그룹원에게 그룹장을 위임해주세요\n(그룹 및 반려동물 관리 -> 그룹 구성원)</string>
    <string name="modify_diary_submit_text">일기 수정하기</string>
    <string name="profile_modify_text">프로필 편집</string>
    <string name="modify_complete_text">수정완료</string>
</resources>