<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.signup.group.CreateGroupFragment">

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progress_circular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/left_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="24dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/right_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="24dp" />

            <TextView
                android:id="@+id/create_pet_title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/create_pet_title_text"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/pet_circle_image"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_marginTop="32dp"
                android:src="@drawable/default_image"
                app:civ_border_color="@color/main_blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/create_pet_title_text" />

            <ImageButton
                android:id="@+id/create_pet_photo_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:src="@drawable/icon_camera"
                app:layout_constraintBottom_toBottomOf="@+id/pet_circle_image"
                app:layout_constraintEnd_toEndOf="@+id/pet_circle_image" />

            <TextView
                android:id="@+id/pet_name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:text="@string/pet_name_text"
                android:textColor="@color/light_black"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/left_guideline"
                app:layout_constraintTop_toBottomOf="@+id/pet_circle_image" />

            <EditText
                android:id="@+id/pet_name_edittext"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/grey_blue_edittext"
                android:hint="@string/pet_name_edittext_hint"
                android:maxLength="20"
                android:padding="16dp"
                android:saveEnabled="false"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@id/right_guideline"
                app:layout_constraintStart_toStartOf="@id/left_guideline"
                app:layout_constraintTop_toBottomOf="@+id/pet_name_text" />

            <TextView
                android:id="@+id/pet_name_check_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:background="@drawable/light_blue_button"
                android:paddingHorizontal="12dp"
                android:paddingVertical="9dp"
                android:text="@string/overlap_check_text"
                android:textColor="@color/main_blue"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/pet_name_edittext"
                app:layout_constraintEnd_toEndOf="@+id/pet_name_edittext"
                app:layout_constraintTop_toTopOf="@+id/pet_name_edittext" />

            <TextView
                android:id="@+id/pet_name_validate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColor="@color/validate_text_color"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@id/right_guideline"
                app:layout_constraintStart_toStartOf="@id/left_guideline"
                app:layout_constraintTop_toBottomOf="@+id/pet_name_edittext" />

            <TextView
                android:id="@+id/pet_type_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/pet_type_text"
                android:textColor="@color/light_black"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/left_guideline"
                app:layout_constraintTop_toBottomOf="@+id/pet_name_validate" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/pet_type_dog_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="4dp"
                android:background="@drawable/btn_click"
                android:text="@string/dog_type_text"
                android:textColor="@drawable/text_click"
                android:textSize="14sp"
                app:layout_constraintEnd_toStartOf="@id/pet_type_cat_button"
                app:layout_constraintStart_toStartOf="@id/left_guideline"
                app:layout_constraintTop_toBottomOf="@+id/pet_type_text" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/pet_type_cat_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/btn_click"
                android:text="@string/cat_type_text"
                android:textColor="@drawable/text_click"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@id/right_guideline"
                app:layout_constraintStart_toEndOf="@+id/pet_type_dog_button"
                app:layout_constraintTop_toBottomOf="@+id/pet_type_text" />

            <TextView
                android:id="@+id/pet_sex_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/pet_sex_text"
                android:textColor="@color/light_black"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/left_guideline"
                app:layout_constraintTop_toBottomOf="@+id/pet_type_dog_button" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/pet_sex_male_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="4dp"
                android:background="@drawable/btn_click"
                android:text="@string/pet_sex_male_text"
                android:textColor="@drawable/text_click"
                android:textSize="14sp"
                app:layout_constraintEnd_toStartOf="@id/pet_sex_female_button"
                app:layout_constraintStart_toStartOf="@id/left_guideline"
                app:layout_constraintTop_toBottomOf="@+id/pet_sex_text" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/pet_sex_female_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/btn_click"
                android:text="@string/pet_sex_female_text"
                android:textColor="@drawable/text_click"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@id/right_guideline"
                app:layout_constraintStart_toEndOf="@id/pet_sex_male_button"
                app:layout_constraintTop_toBottomOf="@+id/pet_sex_text" />

            <TextView
                android:id="@+id/pet_birth_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/pet_birth_text"
                android:textColor="@color/light_black"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/left_guideline"
                app:layout_constraintTop_toBottomOf="@+id/pet_sex_male_button" />

            <TextView
                android:id="@+id/pet_birth_date_picker"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/whitegrey_click_button"
                android:gravity="center_vertical"
                android:hint="@string/pet_birth_date_hint"
                android:padding="16dp"
                android:textSize="14sp"
                app:drawableRightCompat="@drawable/arrow_down"
                app:layout_constraintEnd_toEndOf="@id/right_guideline"
                app:layout_constraintStart_toStartOf="@id/left_guideline"
                app:layout_constraintTop_toBottomOf="@+id/pet_birth_text" />

            <TextView
                android:id="@+id/pet_breed_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/pet_breed_text"
                android:textColor="@color/light_black"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/left_guideline"
                app:layout_constraintTop_toBottomOf="@+id/pet_birth_date_picker" />

            <TextView
                android:id="@+id/pet_breed_bottom_sheet"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/whitegrey_click_button"
                android:gravity="center_vertical"
                android:hint="@string/pet_breed_hint"
                android:padding="16dp"
                android:textSize="14sp"
                app:drawableRightCompat="@drawable/arrow_down"
                app:layout_constraintEnd_toEndOf="@id/right_guideline"
                app:layout_constraintStart_toStartOf="@id/left_guideline"
                app:layout_constraintTop_toBottomOf="@+id/pet_breed_text" />

            <ImageButton
                android:id="@+id/dont_know_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@color/transparent"
                android:src="@drawable/selector_dont_know_button"
                app:layout_constraintStart_toStartOf="@id/left_guideline"
                app:layout_constraintTop_toBottomOf="@+id/pet_breed_bottom_sheet" />

            <TextView
                android:id="@+id/pet_weight_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/pet_weight_text"
                android:textColor="@color/light_black"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/left_guideline"
                app:layout_constraintTop_toBottomOf="@+id/dont_know_button" />

            <EditText
                android:id="@+id/pet_weight_edittext"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/grey_blue_edittext"
                android:hint="@string/pet_weight_hint"
                android:inputType="numberDecimal"
                android:maxLength="20"
                android:padding="16dp"
                android:saveEnabled="false"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@id/right_guideline"
                app:layout_constraintStart_toStartOf="@id/left_guideline"
                app:layout_constraintTop_toBottomOf="@+id/pet_weight_text" />

            <TextView
                android:id="@+id/pet_neutral_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/pet_neutral_text"
                android:textColor="@color/light_black"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/left_guideline"
                app:layout_constraintTop_toBottomOf="@+id/pet_weight_edittext" />

            <RadioGroup
                android:id="@+id/pet_neutral_radio_group"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:checkedButton="@id/not_neutral_radio"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="@id/right_guideline"
                app:layout_constraintStart_toStartOf="@id/left_guideline"
                app:layout_constraintTop_toBottomOf="@+id/pet_neutral_text">

                <RadioButton
                    android:id="@+id/not_neutral_radio"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/not_neutral_text"
                    android:textColor="@color/black_500"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/neutral_radio"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/neutral_text"
                    android:textColor="@color/black_500"
                    android:textSize="16sp" />

            </RadioGroup>

            <TextView
                android:id="@+id/pet_register_num_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/pet_register_num_text"
                android:textColor="@color/light_black"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/left_guideline"
                app:layout_constraintTop_toBottomOf="@+id/pet_neutral_radio_group" />

            <EditText
                android:id="@+id/pet_register_num_edittext"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/grey_blue_edittext"
                android:hint="@string/pet_register_num_hint"
                android:maxLength="20"
                android:padding="16dp"
                android:saveEnabled="false"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@id/right_guideline"
                app:layout_constraintStart_toStartOf="@id/left_guideline"
                app:layout_constraintTop_toBottomOf="@+id/pet_register_num_text" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/pet_submit_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="40dp"
                android:background="@drawable/grey_button"
                android:text="@string/pet_submit_text"
                android:textColor="@color/grey"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/right_guideline"
                app:layout_constraintStart_toStartOf="@id/left_guideline"
                app:layout_constraintTop_toBottomOf="@+id/pet_register_num_edittext" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>